[package]
name = "sspa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "0.1.2"
rppal = "0.14.1"
num = "0.4.0"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "0.8"
features = ["v4"]
